tests/paczka1/fuzzy1/75447000.err
Error in line 2: aZAH9mCrTO S560 84,5
Error in line 8: bBL A215 79,6
Error in line 19: qWbaY6nxgI S560 43,1
